--- a/microstick2.X/nbproject/Makefile-genesis.properties
+++ b/microstick2.X/nbproject/Makefile-genesis.properties
@@ -1,30 +1,38 @@
 #
-#Tue Nov 19 17:56:44 EST 2019
-microstick2_pic24fj64gb002.languagetoolchain.version=1.36
-microstick2_pic24hj128gp502.languagetoolchain.version=1.36
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=37eccb08230908d044ad3fe14e24ea9a
-microstick3vk_pic24f16kl402.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-microstick2_dspic33fj128mc802.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-microstick5vk_pic24fv16km202.languagetoolchain.version=1.36
-microstick3vk_pic24f16ka102.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
-microstick2_pic24hj128gp502.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
-microstick33f24h_pic24hj64gp502.languagetoolchain.version=1.36
-microstick3vk_pic24f16ka102.languagetoolchain.version=1.36
-microstick2_pic24fj64gb002.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-microstick2_pic24hj128gp502.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-configurations-xml=81ef06f6f8f312b0e67be20414985eec
-microstick3vk_pic24f16kl402.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
-microstick5vk_pic24fv16km202.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
+#Tue Nov 26 01:05:45 EST 2019
+microstick2_pic24fj64gb002.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick3vk_pic24f16ka102.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC24F-KA-KL-KM_DFP\\1.1.18
+microstick3vk_pic24f16ka102.languagetoolchain.version=1.41
+microstick33f24h_dspic33fj64mc802.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick33f24h_pic24hj64gp502.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\dsPIC33F-GP-MC_DFP\\1.0.6
+microstick2_dspic33fj128mc802.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\dsPIC33F-GP-MC_DFP\\1.0.6
+microstick2_pic24fj64gb002.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
+microstick5vk_pic24fv16km202.languagetoolchain.version=1.41
+microstick5vk_pic24fv16km202.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick2_dspic33fj128mc802.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
+microstick2_pic24hj128gp502.languagetoolchain.version=1.41
+microstick33f24h_dspic33fj64mc802.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
+microstick2_pic24hj128gp502.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
+microstick2_pic24hj128gp502.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\dsPIC33F-GP-MC_DFP\\1.0.6
+microstick2_pic24hj128gp502.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick33f24h_pic24hj64gp502.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick33f24h_dspic33fj64mc802.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\dsPIC33F-GP-MC_DFP\\1.0.6
+microstick2_pic24fj64gb002.languagetoolchain.version=1.41
+microstick3vk_pic24f16kl402.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick2_dspic33fj128mc802.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick3vk_pic24f16ka102.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
 host.platform=windows
-microstick3vk_pic24f16kl402.languagetoolchain.version=1.36
-microstick33f24h_pic24hj64gp502.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e453b0cf7f7da72a932cfdb2f655401
+microstick2_dspic33fj128mc802.languagetoolchain.version=1.41
+microstick5vk_pic24fv16km202.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC24F-KA-KL-KM_DFP\\1.1.18
+microstick33f24h_pic24hj64gp502.languagetoolchain.version=1.41
+microstick33f24h_pic24hj64gp502.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
 conf.ids=microstick2_dspic33fj128mc802,microstick2_pic24fj64gb002,microstick2_pic24hj128gp502,microstick3vk_pic24f16kl402,microstick3vk_pic24f16ka102,microstick5vk_pic24fv16km202,microstick33f24h_dspic33fj64mc802,microstick33f24h_pic24hj64gp502
-microstick33f24h_pic24hj64gp502.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-microstick33f24h_dspic33fj64mc802.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
-microstick33f24h_dspic33fj64mc802.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-microstick2_dspic33fj128mc802.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
-microstick2_dspic33fj128mc802.languagetoolchain.version=1.36
-microstick3vk_pic24f16ka102.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-microstick5vk_pic24fv16km202.languagetoolchain.dir=G\:\\Program Files (x86)\\Microchip\\xc16\\v1.36\\bin
-microstick2_pic24fj64gb002.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a53e8c22b31e6f5bcc1968d7c72d01dd
-microstick33f24h_dspic33fj64mc802.languagetoolchain.version=1.36
+microstick3vk_pic24f16kl402.languagetoolchain.version=1.41
+microstick3vk_pic24f16kl402.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC24F-KA-KL-KM_DFP\\1.1.18
+microstick5vk_pic24fv16km202.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
+configurations-xml=a9684a0b78f9794a287df5893b7a73f8
+microstick33f24h_dspic33fj64mc802.languagetoolchain.version=1.41
+microstick2_pic24fj64gb002.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC24F-GA-GB_DFP\\1.0.67
+microstick3vk_pic24f16ka102.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=e5736228501ef0825fa503ed0aa3576c
+microstick3vk_pic24f16kl402.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
